Add github action

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name = Terminal-Getpass
+name = raku-Terminal-Getpass
 
 [ReadmeFromPod]
 ; disable = true
@@ -6,3 +6,6 @@ filename = lib/Terminal/Getpass.pm6
 
 [PruneFiles]
 ; match = ^ 'xt/'
+
+[Badges]
+provider = github-actions/test
