--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,8 @@ name = raku-Terminal-Getpass
 ; disable = true
 filename = lib/Terminal/Getpass.pm6
 
+[UploadToZef]
+
 [PruneFiles]
 ; match = ^ 'xt/'
 
